--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,12 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/bacon.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.rs2xml__1_.jar=src\\jar\\rs2xml (1).jar
 file.reference.sqlite-jdbc-3.30.1.jar=src\\jar\\sqlite-jdbc-3.30.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.sqlite-jdbc-3.30.1.jar}
+    ${file.reference.sqlite-jdbc-3.30.1.jar}:\
+    ${file.reference.rs2xml__1_.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
